Using org.apache.commons.codec for Base64.